--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="icon" href="https://avatars.githubusercontent.com/u/55247343?v=4">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link
+      rel="icon"
+      href="https://avatars.githubusercontent.com/u/55247343?v=4"
+    />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Yeyee's Website</title>
   </head>
   <body>
-    <div id="main">
-    </div>
+    <div id="main"></div>
   </body>
 </html>
